--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0">
+    <meta name="description" content="Instagram app by @karlhadwen">
+
     <title>Instagram</title>
+    <style>
+      body {
+        background-color: #fafafa;
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Do not go where the path may lead, go instead where there is no path and leave a trail.</noscript>
     <div id="root"></div>
   </body>
 </html>
